--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horiseon</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Horiseon</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
+    </head>
+    <body>
+        <!-- header -->
+         <header>
+            <h1><a href="/">Hori<span>seo</span>n</a></h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Manaegment</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
+         </header>
+
+        <!-- contet -->
+         <section class="firght"></section>
+
+         <section class="content">
+            <article class="Engine" id="Search-engine-optimitzation">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="Search-engine-optimitzation" class="float-left" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right <b>business as they travel, shop, or sit on sit on their counh at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for business.
+                </p>
+            </article>
+
+            <article id="online-reputation management" class="Reputation">
+                <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Manaegment" class="float-right">
+                <h2>Online Reputation Manaegment</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead genetation.
+                </p>
+            </article>
+
+            <article class="Media" id="social-media-marketing">
+                <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. SOcial media marketing helps you determine which platforms are suited to your brand, suing analytics to the right marketing and increases your lead genetation.
+                </p>
+            </article>
+         </section>
+         <!-- brands -->
+        <article class="brands">
+
+            <article class="Generation">
+                <h2>Lead Generation</h2>
+                <img src="./assets/images/lead-generation.png" alt="Lead Generation">
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly toyour website.
+                </p>
+            </article>
+
+            <article class="brand">
+                <h2>Brand Awareness</h2>
+                <img src="./assets/images/brand-awareness.png" alt="Brand Awareness">
+                <p>
+                    Users find your business through paid and organic searching, increading the search ranking and visibility your business.
+                </p>
+            </article>
+            <article class="Manaegment">
+                <h2>Cost Manaegment</h2>
+                <img src="./assets/images/cost-management.png" alt="Cost Manaegment">
+                <p>As the search ranling for your business increases, your advrtising costs decrease, and you no longer need to advertise your page.</p>
+            </article>
+        </article>
+          <!-- footer -->
+           <footer>
+            <h1>Made with by❤️Horiseon</h1>
+            <p>&copy; 2023 Horiseon Social Solution Services, inc.</p>
+           </footer>
+    </body>
 </html>
